ArgoCD/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      containers:
      - name: php-deployment
        image: petrovichpower/php-page:new
        ports:
        - containerPort: 80
